fixed date overlapping

--- a/portfolio.css
+++ b/portfolio.css
@@ -161,7 +161,7 @@ button:focus{
 .project-column-title-container{
 	margin-top:1.5rem;
 	padding-bottom:0;
-	height:2rem;
+	/*height:2rem;*/
 	margin-bottom: 0;
 
 }
